Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:latest
        resources: 
          requests:
            memory: "256Mi"
            cpu: "1000m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
